--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bot.js",
   "type": "commonjs",
   "scripts": {
+    "train": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
